*actually* fix alertify on mobile

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -107,9 +107,9 @@
             transform: translateY(-50%);
 
             > * {
-                width: 30%;
-                min-width: 450px;
-                max-width: 95%;
+                width: 100%;
+                min-width: 300px;
+                max-width: 500px;
                 margin: 0 auto;
                 text-align: left;
                 padding: @alertify_padding-base;
